--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <!-- Two columns layout end -->
     <section class="three-column">
         <div class="card">
-            <h2 class="card-text">Sign up today!</h2>
+        <a class="card-text" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"><h2>SIGN UP TODAY</h2></a>
         </div>
     </section>
 </body>
